target_sources(HLAM
	PRIVATE
		DragNDropEventFilter.hpp
		EditorContext.cpp
		EditorContext.hpp
		FileListPanel.cpp
		FileListPanel.hpp
		FileListPanel.ui
		FullscreenWidget.cpp
		FullscreenWidget.hpp
		IInputSink.hpp
		MainWindow.cpp
		MainWindow.hpp
		MainWindow.ui
		OpenGLGraphicsContext.hpp
		SceneWidget.cpp
		SceneWidget.hpp
		StateSnapshot.hpp
		TextureWidget.cpp
		TextureWidget.hpp)

add_subdirectory(assets)
add_subdirectory(camera_operators)
add_subdirectory(options)
add_subdirectory(settings)
