target_sources(HLMV
	PRIVATE
		Credits.cpp
		Credits.hpp
		EditorContext.cpp
		EditorContext.hpp
		FullscreenWidget.cpp
		FullscreenWidget.hpp
		IInputSink.hpp
		MainWindow.cpp
		MainWindow.hpp
		MainWindow.ui
		SceneWidget.cpp
		SceneWidget.hpp)

add_subdirectory(assets)
add_subdirectory(camera_operators)
add_subdirectory(options)
add_subdirectory(settings)
