target_sources(HLAM
	PRIVATE
		DockHelpers.hpp
		InfoBar.hpp
		InfoBar.cpp
		InfoBar.ui
		StudioModelData.cpp
		StudioModelData.hpp
		StudioModelEditWidget.cpp
		StudioModelEditWidget.hpp
		StudioModelEditWidget.ui
		StudioModelTextureUtilities.cpp
		StudioModelTextureUtilities.hpp
		StudioModelUndoCommands.cpp
		StudioModelUndoCommands.hpp
		StudioModelValidators.cpp
		StudioModelValidators.hpp
		StudioModelView.cpp
		StudioModelView.hpp
		StudioModelView.ui
		Timeline.cpp
		Timeline.hpp
		Timeline.ui)

add_subdirectory(dialogs)
add_subdirectory(dockpanels)
