target_sources(HLAM
	PRIVATE
		AttachmentsPanel.cpp
		AttachmentsPanel.hpp
		AttachmentsPanel.ui
		BodyPartsPanel.cpp
		BodyPartsPanel.hpp
		BodyPartsPanel.ui
		BonesPanel.cpp
		BonesPanel.hpp
		BonesPanel.ui
		DockHelpers.hpp
		ExportUVMeshDialog.hpp
		ExportUVMeshDialog.cpp
		ExportUVMeshDialog.ui
		FlagsPanel.cpp
		FlagsPanel.hpp
		FlagsPanel.ui
		HitboxesPanel.cpp
		HitboxesPanel.hpp
		HitboxesPanel.ui
		InfoBar.cpp
		InfoBar.hpp
		InfoBar.ui
		LightingPanel.cpp
		LightingPanel.hpp
		LightingPanel.ui
		ModelDataPanel.cpp
		ModelDataPanel.hpp
		ModelDataPanel.ui
		ModelDisplayPanel.cpp
		ModelDisplayPanel.hpp
		ModelDisplayPanel.ui
		ModelInfoPanel.cpp
		ModelInfoPanel.hpp
		ModelInfoPanel.ui
		ScenePanel.cpp
		ScenePanel.hpp
		ScenePanel.ui
		SequencesPanel.cpp
		SequencesPanel.hpp
		SequencesPanel.ui
		SkyLightPanel.cpp
		SkyLightPanel.hpp
		SkyLightPanel.ui
		TexturesPanel.cpp
		TexturesPanel.hpp
		TexturesPanel.ui
		Timeline.cpp
		Timeline.hpp
		Timeline.ui
		TransformPanel.cpp
		TransformPanel.hpp
		TransformPanel.ui)

add_subdirectory(objects)
