target_sources(HLAM
	PRIVATE
		InfoBar.cpp
		InfoBar.hpp
		InfoBar.ui
		SkyLightPanel.cpp
		SkyLightPanel.hpp
		SkyLightPanel.ui
		StudioModelAttachmentsPanel.cpp
		StudioModelAttachmentsPanel.hpp
		StudioModelAttachmentsPanel.ui
		StudioModelBodyPartsPanel.cpp
		StudioModelBodyPartsPanel.hpp
		StudioModelBodyPartsPanel.ui
		StudioModelBonesPanel.cpp
		StudioModelBonesPanel.hpp
		StudioModelBonesPanel.ui
		StudioModelDockHelpers.hpp
		StudioModelExportUVMeshDialog.hpp
		StudioModelExportUVMeshDialog.cpp
		StudioModelExportUVMeshDialog.ui
		StudioModelFlagsPanel.cpp
		StudioModelFlagsPanel.hpp
		StudioModelFlagsPanel.ui
		StudioModelHitboxesPanel.cpp
		StudioModelHitboxesPanel.hpp
		StudioModelHitboxesPanel.ui
		StudioModelLightingPanel.cpp
		StudioModelLightingPanel.hpp
		StudioModelLightingPanel.ui
		StudioModelModelDataPanel.cpp
		StudioModelModelDataPanel.hpp
		StudioModelModelDataPanel.ui
		StudioModelModelDisplayPanel.cpp
		StudioModelModelDisplayPanel.hpp
		StudioModelModelDisplayPanel.ui
		StudioModelModelInfoPanel.cpp
		StudioModelModelInfoPanel.hpp
		StudioModelModelInfoPanel.ui
		StudioModelScenePanel.cpp
		StudioModelScenePanel.hpp
		StudioModelScenePanel.ui
		StudioModelSequencesPanel.cpp
		StudioModelSequencesPanel.hpp
		StudioModelSequencesPanel.ui
		StudioModelTexturesPanel.cpp
		StudioModelTexturesPanel.hpp
		StudioModelTexturesPanel.ui
		StudioModelTransformPanel.cpp
		StudioModelTransformPanel.hpp
		StudioModelTransformPanel.ui
		Timeline.cpp
		Timeline.hpp
		Timeline.ui)

add_subdirectory(objects)
